# hermes-agent-skill

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  README_simple.md  README_zh.md  pyproject.toml
.universal-memory/: MEMORY.md  USER.md
cli/: __init__.py
cli/memory_cli/: __init__.py  main.py
cli/memory_cli/commands/: search.py  stats.py  view.py
demos/calendar_todo/: README.md  demo_real_memory.py  demo_runner.py  run_demo.sh  test_demo.py
demos/calendar_todo/scenarios/: session_1_first_meeting.py  session_2_create_todo.py  session_3_recurring_reminder.py  session_4_batch_create.py
docs/: ARCHITECTURE.md  COMPATIBILITY.md  QUICKSTART.md  TESTING.md
docs/plans/: demo-calendar-todo-memory.md  universal-memory-skill-design.md
examples/claude-desktop/: README.md
scripts/: memory_cleanup.py  memory_extract.py  memory_inject.py
skills/: memory-manager.md  memory-reflect.md  memory.md
tests/: test_cli_commands.py  test_edge_cases.py  test_memory_cleanup.py  test_memory_extract.py  test_memory_inject.py  test_performance.py  test_skill_format.py
tests/integration/: test_chinese_workflow.py  test_cli_integration.py  test_full_workflow.py
